<resources>
    <string name="app_name">Claculator</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="buttonC">C</string>
    <string name="button_Dot">.</string>
    <string name="button_0">0</string>
    <string name="button_division">/</string>
    <string name="button_multiplication">*</string>
    <string name="button_subtraction">-</string>
    <string name="button_addition">+</string>
    <string name="button_Equals">=</string>
    <string name="init_screen">0</string>
    <string name="themes">Themes</string>
    <string name="radiobutton_light">Light theme</string>
    <string name="radiobutton_dark">Dark theme</string>
    <string name="button_apply">Back</string>
    <string name="action_settings">Settings</string>
    <string name="action_themes">Change theme</string>
    <string name="Light_Theme">Light_Theme</string>
    <string name="Dark_Theme">Dark_Theme</string>
</resources>