<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/RootLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="0dp"
        android:layout_height="@dimen/space"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="textEnd">

        <TextView
            android:id="@+id/textView2"
            style="@style/SavedDataView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/saved_data_height"
            android:text=""
            android:textAlignment="viewEnd"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="textEnd">

        <TextView
            android:id="@+id/textView1"
            style="@style/ResultView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/result_height"
            android:text="@string/init_screen"
            android:textAlignment="viewEnd"/>

    </LinearLayout>

    <Space
        android:layout_width="@dimen/width_all_elements"
        android:layout_height="@dimen/space"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            style="@style/ButtonNumberStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            style="@style/ButtonNumberStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            style="@style/ButtonNumberStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_Division"
            style="@style/ButtonActionStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_division" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            style="@style/ButtonNumberStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            style="@style/ButtonNumberStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            style="@style/ButtonNumberStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiplicaion"
            style="@style/ButtonActionStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_multiplication" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            style="@style/ButtonNumberStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            style="@style/ButtonNumberStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            style="@style/ButtonNumberStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_subtraction"
            style="@style/ButtonActionStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_subtraction"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_C"
            style="@style/ButtonCStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/buttonC" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            style="@style/ButtonNumberStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_Dot"
            style="@style/ButtonNumberStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_Dot"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_addition"
            style="@style/ButtonActionStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_addition"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equals"
            style="@style/ButtonActionStyle"
            android:layout_width="@dimen/width_all_elements"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_Equals"/>
    </LinearLayout>

</LinearLayout>